# ima-evm-utils

./: .travis.yml  Makefile.am  README  build.sh  configure.ac
evmtest/: INSTALL  Makefile.am  README  evmtest  example.conf  unknown_privkey_ima.pem
evmtest/files/: Notes  common.sh  load_policy.sh
evmtest/files/policies/: kernel_module_policy  kexec_policy  signed_policy  unsigned_policy
evmtest/functions/: example_test.sh  r_env_validate.sh
evmtest/src/: Makefile  basic_mod.c  simple_modload.c
evmtest/tests/: boot_aggregate.sh  env_validate.sh  example_test.sh  kexec_sig.sh  kmod_sig.sh  policy_sig.sh  xattr_preserve.sh
m4/: manpage-docbook-xsl.m4
packaging/: ima-evm-utils.spec
src/: evmctl.c  hash_info.gen  imaevm.h  libimaevm.c
tests/: Makefile.am  boot_aggregate.test  functions  functions.sh  gen-keys.sh  ima_hash.test  ima_sign.test  ima_verify.test  install-gost-engine.sh  install-libressl.sh  install-swtpm.sh  install-tpm2-tss.sh  portable_signatures.test  sign_verify.test
travis/: alpine.sh  debian.sh  fedora.sh  tumbleweed.sh
